[WebVTT] Rename Middle to Center

BUG=663797

Review-Url: https://codereview.chromium.org/2683633006
Cr-Commit-Position: refs/heads/master@{#450901}

Former-commit-id: c129fcf7b932d95939244304d7e6db825c65117b